-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.12, 5.15, 6.2.7, 6.4.1, 6.5.0 Beta1
-
5.15.10
-
-
ffecc122d7 (qt/qtdeclarative/dev) ffecc122d7 (qt/tqtc-qtdeclarative/dev) ee9a7b1bee (qt/qtdeclarative/6.4) ee9a7b1bee (qt/tqtc-qtdeclarative/6.4) 38e9472d91 (qt/tqtc-qtdeclarative/6.2) 89fc2b5730 (qt/tqtc-qtdeclarative/5.15)
tSimple Hello world apps are crashing on startup on certain device below armv7 (32bit) devices .
- Galaxy S5 (Android 6.0.1)
- Galaxy S5 Duo (Android 6.0.1)
This crash is reproducible with the simple Qt app created using the QtCreator Qt Quick app template.
This happens with Qt5.15.10 only. Qt5.15.9 Works good.
Following is logcat details:
Logcat:
2022-09-21 11:15:19.202 9950-9971/org.qtproject.example.Hello1 D/libEGL: eglInitialize EGLDisplay = 0xb2c19e2c 2022-09-21 11:15:19.242 9950-9971/org.qtproject.example.Hello1 A/libc: Fatal signal 11 (SIGSEGV), code 1, fault addr 0xbbadbeef in tid 9971 (qtMainLoopThrea) 2022-09-21 11:15:19.272 856-856/? D/CustomFrequencyManagerService: releaseDVFSLockLocked : Getting Lock type frm List : DVFS_MIN_LIMIT frequency : 1958400 uid : 1000 pid : 856 tag : ACTIVITY_RESUME_BOOSTER@16 2022-09-21 11:15:19.272 856-856/? D/CustomFrequencyManagerService: FrequencyrequestList.getNextCStateDisableRequest, index: 1 2022-09-21 11:15:19.352 328-328/? A/DEBUG: *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** 2022-09-21 11:15:19.352 328-328/? A/DEBUG: Build fingerprint: 'samsung/klteduosxx/klte:6.0.1/MMB29M/G900FDXXU1CQB1:user/release-keys' 2022-09-21 11:15:19.352 328-328/? A/DEBUG: Revision: '14' 2022-09-21 11:15:19.352 328-328/? A/DEBUG: ABI: 'arm' 2022-09-21 11:15:19.352 328-328/? A/DEBUG: pid: 9950, tid: 9971, name: qtMainLoopThrea >>> org.qtproject.example.Hello1 <<< 2022-09-21 11:15:19.352 328-328/? A/DEBUG: signal 11 (SIGSEGV), code 1 (SEGV_MAPERR), fault addr 0xbbadbeef 2022-09-21 11:15:19.362 328-328/? A/DEBUG: r0 bbadbeef r1 00000000 r2 00000003 r3 00000000 2022-09-21 11:15:19.362 328-328/? A/DEBUG: r4 00010000 r5 9bf00000 r6 00000003 r7 b2c19e80 2022-09-21 11:15:19.362 328-328/? A/DEBUG: r8 9bf00000 r9 00010000 sl 00000001 fp adfaaeb0 2022-09-21 11:15:19.362 328-328/? A/DEBUG: ip 9e62bf48 sp b2c19e70 lr 9e5fc983 pc 9e5fc986 cpsr 400f0030 2022-09-21 11:15:19.362 328-328/? A/DEBUG: backtrace: 2022-09-21 11:15:19.362 328-328/? A/DEBUG: #00 pc 00136986 /data/app/org.qtproject.example.Hello1-1/lib/arm/libQt5Qml_armeabi-v7a.so (offset 0xb0000) 2022-09-21 11:15:19.362 328-328/? A/DEBUG: #01 pc 0013697f /data/app/org.qtproject.example.Hello1-1/lib/arm/libQt5Qml_armeabi-v7a.so (offset 0xb0000) 2022-09-21 11:15:19.462 856-1779/? D/CustomFrequencyManagerService: releaseDVFSLockLocked : Getting Lock type frm List : DVFS_MIN_LIMIT frequency : 2457600 uid : 1000 pid : 856 tag : LAUNCHER_APP_BOOSTER_CPU@6 Using ndk's addr2line tool, the addresses printed in logcat map to below methods QV4::ExecutableCompilationUnit::instantiate(QV4::ExecutionEngine*) qqmljsparser.cpp:? QV4::PromiseCtor::method_race(QV4::FunctionObject const*, QV4::Value const*, QV4::Value const*, int) qqmljsparser.cpp:?
- duplicates
-
QTBUG-106269 Qt Quick apps immediately crash under Android 6
-
- Closed
-
- relates to
-
QTBUG-107774 madvise() terminates application due to EBADF code
-
- Closed
-