masm: Treat Android as generic Posix regarding mmap and friends

Apparently we cannot rely on madvise() to work as we expect it on linux.

Fixes: QTBUG-106864
Fixes: QTBUG-106269
Change-Id: Ie488ad788386c1a8c493d6bba632787f5282baaa
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit ffecc122d785de9c4c5defd8724526b8dd4982dc)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>